--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,3 +1,4 @@
+<h1>Stupid Coaching</h1>
 <form action="/answer" data-turbo="false">
   <input type="text" name="member">
   <input type="submit" value="Ask!">
